# static-string

./: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  static_string.hh
examples/: demo.cc
test/: test.cc
